# phish-detector

./: .gitignore  README.md  build_dataset.py  main.py  pyproject.toml
src/phish_detector/: api.py  cli.py  features.py  integrations.py  model.py  parser.py
